# c-core

./: .appveyor.yml  .clang-format  .gitignore  .pubnub.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PubNubModule.Build.cs  README.md  docker-compose.yml  posix.mk  pubnub_alloc_static.c  run_contract_tests.py  windows.mk
.github/: CODEOWNERS
console/: .gitignore  Makefile  pnc_config.h  pnc_helpers.c  pnc_helpers.h  pnc_ops_callback.c  pnc_ops_callback.h  pnc_ops_sync.c  pnc_ops_sync.h  pnc_readers.c  pnc_readers.h  pnc_subscriptions.c  pnc_subscriptions.h  pubnub_console.c  pubnub_console.h
contiki/: Makefile  README.md  pbpal_contiki.c  pubnub.t.c  pubnubDemo.c  pubnub_assert_contiki.c  pubnub_contiki.h  pubnub_ntf_contiki.c  pubnub_ntf_contiki.h  pubnub_version_contiki.c  router-webserver-node.c
core/: Makefile  W_makefile.mk  dbg.h  pb_sleep_ms.h  pbauto_heartbeat.c  pbauto_heartbeat.h  pbauto_heartbeat_callback.c  pbauto_heartbeat_sync.c  pbcc_actions_api.c  pbcc_actions_api.h  pbcc_advanced_history.c  pbcc_advanced_history.h  pbcc_crypto.c  pbcc_crypto.h  pbcc_crypto_aes_cbc.c  pbcc_crypto_legacy.c  pbcc_crypto_unit_tests.c  pbcc_entity_api.c  pbcc_entity_api.h  pbcc_event_engine.c  pbcc_event_engine.h  pbcc_fetch_history.c  pbcc_fetch_history.h  pbcc_grant_token_api.c  pbcc_grant_token_api.h  pbcc_logger_manager.c  pbcc_logger_manager.h  pbcc_memory_utils.c  pbcc_memory_utils.h  pbcc_objects_api.c  pbcc_objects_api.h  pbcc_request_retry_timer.c  pbcc_request_retry_timer.h  pbcc_revoke_token.c  pbcc_revoke_token.h  pbcc_revoke_token_api.c  pbcc_revoke_token_api.h  pbcc_set_state.c  pbcc_set_state.h  pbcc_subscribe_event_engine.c  (+162 more)
cpp/: README.md  posix.mk  posix_openssl.mk  pubnub.hpp  pubnub_callback_posix.cpp  pubnub_common.hpp  pubnub_futres_cpp11.cpp  pubnub_futres_posix.cpp  pubnub_futres_sync.cpp  pubnub_futres_windows.cpp  pubnub_mutex.hpp  pubnub_subloop.cpp  pubnub_sync.cpp  pubnub_v2_message.hpp  pubnub_version_posix.cpp  pubnub_version_windows.cpp  test_posix.mk  testcpp.mk  tribool.hpp  windows.mk  windows_openssl.mk
esp8266/: pbpal_espconn.c  pubnub_internal.h
freertos/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  README.md  msstopwatch_esp32.c  msstopwatch_pal.h  pbpal_freertos_blocking_io.c  pbpal_mutex.h  pbpal_resolv_and_connect_freertos_tcp.c  pbtimespec_elapsed_ms_esp32.c  pbtimespec_elapsed_ms_esp32.h  pubnub_assert_freertos.c  pubnub_callback.h  pubnub_config.h  pubnub_freertos_logger.c  pubnub_generate_uuid_freertos.c  pubnub_get_native_socket.c  pubnub_get_native_socket.h  pubnub_internal.h  pubnub_ntf_callback_freertos.c  pubnub_sync.h  pubnub_version_freertos.c
lib/: Makefile  pb_deprecated.h  pb_extern.h  pb_strncasecmp.c  pb_strncasecmp.h  pb_strnlen_s.c  pb_strnlen_s.h  pbarray.c  pbarray.h  pbarray_unit_test.c  pbcrc32.c  pbcrc32.h  pbhash_set.c  pbhash_set.h  pbhash_set_unit_test.c  pbref_counter.c  pbref_counter.h  pbstr_remove_from_list.c  pbstr_remove_from_list.h  pbstrdup.c  pbstrdup.h  pubnub_dns_codec.c  pubnub_dns_codec.h  pubnub_dns_codec_unit_test.c  pubnub_parse_ipv4_addr.c  pubnub_parse_ipv4_addr.h  pubnub_parse_ipv6_addr.c  pubnub_parse_ipv6_addr.h  pubnub_parse_ipv6_addr_unit_test.c
make/: posix_compiler_linker_flags.mk  posix_cpp_targets.mk  posix_preprocessing.mk  posix_source_files.mk  posix_targets.mk  windows_compiler_linker_flags.mk  windows_cpp_targets.mk  windows_preprocessing.mk  windows_source_files.mk  windows_targets.mk
mbedtls/: README.md  pbpal_connect_mbedtls.c  pbpal_mbedtls.c  pubnub_pal.h
microchip_harmony/: README.md  pbpal_harmony.c  pbpal_mutex.h  pbpal_resolv_and_connect_harmony_tcp.c  pubnub_assert_harmony.c  pubnub_callback.h  pubnub_config.h  pubnub_generate_uuid_harmony.c  pubnub_harmony_logger.c  pubnub_internal.h  pubnub_ntf_harmony.c  pubnub_version_harmony.c
openssl/: README.md  msstopwatch_pal.h  pbaes256.c  pbaes256.h  pbauto_heartbeat_callback_posix.c  pbauto_heartbeat_init_posix.c  pbmd5.h  pbpal_add_system_certs.h  pbpal_add_system_certs_posix.c  pbpal_add_system_certs_windows.c  pbpal_connect_openssl.c  pbpal_mutex.h  pbpal_openssl.c  pbpal_openssl_blocking_io.c  pbpal_resolv_and_connect_openssl.c  pbsha256.h  posix.mk  pubnub_callback.h  pubnub_config.h  pubnub_get_native_socket.c  pubnub_get_native_socket.h  pubnub_internal.h  pubnub_ntf_callback_openssl_posix.c  pubnub_ntf_callback_openssl_windows.c  pubnub_ntf_callback_posix.c  pubnub_ntf_callback_windows.c  pubnub_sync.h  pubnub_version_openssl.c  uwp.mk  windows.mk
posix/: README.md  console_subscribe_paint.h  monotonic_clock_get_time.c  monotonic_clock_get_time.h  monotonic_clock_get_time_darwin.c  monotonic_clock_get_time_posix.c  msstopwatch_monotonic_clock.c  msstopwatch_pal.h  pb_sleep_ms.c  pbauto_heartbeat_callback_posix.c  pbauto_heartbeat_init_posix.c  pbpal_mutex.h  pbpal_posix_blocking_io.c  pbtimespec_elapsed_ms.c  pbtimespec_elapsed_ms.h  posix.mk  posix_socket_blocking_io.c  pubnub_callback.h  pubnub_config.h  pubnub_dns_system_servers.c  pubnub_generate_uuid_posix.c  pubnub_get_native_socket.c  pubnub_get_native_socket.h  pubnub_internal.h  pubnub_ntf_callback_posix.c  pubnub_posix_sync.h  pubnub_sync.h  pubnub_version_posix.c
qt/: README.md  fn_test.pro  pubnub.cpp  pubnub.doxygen  pubnub.hpp  pubnub.pro  pubnub_config.h  pubnub_futres_qt.cpp  pubnub_gui.pro  pubnub_internal.h  pubnub_qt.cpp  pubnub_qt.h  pubnub_qt_gui_sample.cpp  pubnub_qt_gui_sample.h  pubnub_qt_sample.cpp  pubnub_qt_sample.h
unreal/: README.md  pubnub_core.hpp
windows/: README.md  console_subscribe_paint.h  metadata.exp  msstopwatch_pal.h  msstopwatch_windows.c  pb_sleep_ms.c  pbauto_heartbeat_init_windows.c  pbpal_dns_query_ex.c  pbpal_dns_query_ex.h  pbpal_mutex.h  pbpal_windows_blocking_io.c  pbtimespec_elapsed_ms.c  pbtimespec_elapsed_ms.h  pubnub_callback.h  pubnub_config.h  pubnub_dns_system_servers.c  pubnub_generate_uuid_windows.c  pubnub_get_native_socket.c  pubnub_get_native_socket.h  pubnub_internal.h  pubnub_ntf_callback_windows.c  pubnub_posix_callback.h  pubnub_sync.h  (+6 more)
(+332 files in other folders)
